<resources>
    <string name="app_name">MyDao</string>
    <string name="main_home">首页</string>
    <string name="main_market">行情</string>
    <string name="main_explore">探索</string>
    <string name="main_my">我的</string>
    <string name="my_about">关于我们</string>
    <string name="my_download">应用下载</string>
    <string name="my_lang">语言</string>
    <string name="my_node">节点设置</string>
    <string name="my_add_rpc">添加RPC</string>
    <string name="my_w_connect">WalletConnect</string>

    <string name="my_share_copy_address">复制下载地址</string>
    <string name="app_content">MyDao是一款移动端账户App，旨在为用户提供安全，好用，功能强大数字资产管理工具。</string>
    <string name="tab_home">首页</string>
    <string name="tab_explore">探索</string>
    <string name="tab_my">我的</string>

    <string name="dialog_reject">拒绝</string>
    <string name="dialog_approve">同意</string>
    <string name="message_reject_request">遭到用户拒绝</string>
    <string name="tab_wallet">钱包</string>
    <string name="explore_title">责任声明</string>
    <string name="explore_disclaimer">您即将使用第三方链接,确定即同意第三方的《隐私政策》和《用户协议》，您在这一链接中的所有行为和使用情况，均由该链接的供应商负责。</string>
    <string name="home_top_name">助记词账户</string>
    <string name="wallet_name">钱包名称</string>
    <string name="my_update">检测更新</string>
    <string name="my_recover">找回我的资产</string>
    <string name="recover_account_str">找回账户</string>
    <string name="priv_account_str">私钥账户</string>
    <string name="input_www">请输入网址</string>
    <string name="exp_str">浏览器</string>
    <string name="search_btn">搜索</string>
    <string name="search_his">搜索历史</string>
    <string name="need_agree_pers">需要您同意以下权限才能正常使用</string>
    <string name="refuse_pers">您拒绝了如下权限</string>
    <string name="no_dotip">不再提醒</string>
    <string name="ref_str">刷新</string>
    <string name="copy_url_str">复制链接</string>
    <string name="ex_open">浏览器打开</string>
    <string name="exit_str">退出</string>
    <string name="wc_get_addr">允许获取当前钱包地址</string>
    <string name="wc_sign_str">允许向当前钱包请求签名</string>
    <string name="wc_at">该服务由 WalletConnect 协议支持</string>
    <string name="wc_w_addr">钱包地址</string>
    <string name="wc_cnet">当前网络</string>
    <string name="wc_dis">断开连接</string>
    <string name="wc_pay_de">支付详情</string>
    <string name="wc_pay_me">支付信息</string>
    <string name="wc_pay_address">付款地址</string>
    <string name="wc_fee">矿工费</string>
    <string name="wc_next">下一步</string>
    <string name="wc_con">WalletConnect正在连接你的钱包</string>
    <string name="wc_coned">已经与下列钱包建立连接</string>
    <string name="del_str">删除</string>
    <string name="del_tip_str">是否删除?</string>

    <string name="tian_str">提案</string>
    <string name="tp_str">投票</string>
    <string name="tp_error">活动太火爆了，请稍后重试</string>
    <string name="fee_setting">矿工费设置</string>
    <string name="enter_str">请输入</string>
    <string name="switch_account_str">切换账号</string>
    <string name="dapp_sign_re">Dapp发起签名请求</string>
    <string name="signme">签名信息</string>
    <string name="i_wallet">我的钱包</string>
    <string name="c_entrance">便捷入口</string>
    <string name="n_yopen">暂未开放</string>
    <string name="save_suc">保存成功</string>
    <string name="like_str">收藏</string>
    <string name="collect_suc_str">收藏成功！</string>
    <string name="my_collect_str">我的收藏</string>
    <string name="region_not_supported">当前地区不支持此功能</string>
    <string name="region_block_title">出错了</string>
    <string name="region_block_subtitle">稍后重试</string>
    <string name="region_block_retry">重试</string>

</resources>