<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bg_white_8"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingTop="30dp"
    android:paddingRight="16dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/tv_switch_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/switch_account_str"
        android:textColor="@color/gray_33"
        android:textSize="12sp"
        app:drawableTopCompat="@mipmap/ic_switch_account" />

    <TextView
        android:id="@+id/tv_refresh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/ref_str"
        android:textColor="@color/gray_33"
        android:textSize="12sp"
        app:drawableTopCompat="@mipmap/ic_ref" />

    <TextView
        android:id="@+id/tv_copy_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/copy_url_str"
        android:textColor="@color/gray_33"
        android:textSize="12sp"
        app:drawableTopCompat="@mipmap/ic_url" />

    <TextView
        android:id="@+id/tv_browser_open"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/ex_open"
        android:textColor="@color/gray_33"
        android:textSize="12sp"
        app:drawableTopCompat="@mipmap/ic_brow" />


    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/exit_str"
        android:textColor="@color/gray_33"
        android:textSize="12sp"
        app:drawableTopCompat="@mipmap/ic_exit" />


</LinearLayout>

