<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:singleLine="true"
            android:id="@+id/et_search"
            android:paddingStart="12dp"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_edit"
            android:drawableStart="@mipmap/ic_search"
            android:drawablePadding="5dp"
            android:hint="@string/input_www"
            android:textColor="@color/color_333649"
            android:textColorHint="@color/color_8E92A3"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/search_btn"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:text="@string/search_his"
        android:textColor="@color/color_333649"
        android:textSize="16sp" />

    <cn.finalteam.loadingviewfinal.RecyclerViewFinal
        android:layout_marginStart="16dp"
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
