<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_wc_grant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8FA">


    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_wallet_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="--"
            android:textColor="@color/gray_349"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_dapp_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="http://3784r83987294294"
            android:textColor="@color/gray_8e"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_white_r10"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawablePadding="5dp"
                android:text="@string/wc_w_addr"
                android:textColor="@color/gray_8e"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_address"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:drawablePadding="5dp"
                android:text="--"
                android:textColor="@color/gray_33"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_height="1px"
                android:layout_marginStart="30dp"
                android:background="#DDDDDD" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawablePadding="5dp"
                android:text="@string/wc_cnet"
                android:textColor="@color/gray_8e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_chain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="--"
                android:textColor="@color/gray_33"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_wc_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@drawable/ic_right"
            android:drawablePadding="5dp"
            android:text="@string/wc_at" />


            <Button
                android:id="@+id/btn_dis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/my_wallets_red"
                android:gravity="center"
                android:text="@string/wc_dis"
                android:textColor="@color/white"
                android:textSize="17sp" />


    </LinearLayout>


</FrameLayout>