<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_wc_grant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_re_white">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="13dp"
            android:text="@string/cancel"
            android:textColor="#8E92A3"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="13dp"
            android:text="@string/dapp_sign_re"
            android:textColor="@color/color_333649"
            android:textSize="17sp" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dapp_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="-"
            android:textColor="@color/gray_349"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_dapp_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="13dp"
            android:text="-"
            android:textColor="@color/gray_8e"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="28dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:text="@string/signme"
                android:textSize="13sp"
                android:textColor="@color/gray_8e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_message"
                android:layout_marginTop="10dp"
                android:textColor="@color/gray_33"
                android:textSize="13sp"
                android:text="--"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/lineColor" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/i_wallet"
                    android:textColor="@color/gray_8e"
                    android:textSize="13sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_wallet_addr"
                    android:singleLine="true"
                    android:textColor="@color/gray_33"
                    android:textSize="13sp"
                    android:ellipsize="middle"
                    android:text="--"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_import_wallet_button_ok"
            android:gravity="center"
            android:text="@string/wc_next"
            android:textColor="@color/white"
            android:textSize="17sp" />


    </LinearLayout>


</FrameLayout>